[gd_scene load_steps=14 format=2]

[ext_resource path="res://gameworld/models/furniture/furniture_Chair.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://gameworld/objects/fakegame/fakegame.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameworld/objects/computer.gd" type="Script" id=3]
[ext_resource path="res://gameworld/objects/hum.wav" type="AudioStream" id=4]
[ext_resource path="res://gameworld/models/furniture/furniture_Computer.mesh" type="ArrayMesh" id=5]
[ext_resource path="res://gameworld/models/furniture/furniture_Table.mesh" type="ArrayMesh" id=6]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.1, 0.2, 0.3 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.5, 0.5, 0.3 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.3, 0.6, 0.3 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 3 )

[sub_resource type="QuadMesh" id=1]
size = Vector2( 0.2, 0.15 )

[node name="Computer" type="StaticBody"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 4 )

[node name="CollisionShape4" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1.1, -0.1 )
shape = SubResource( 7 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 5 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0.8 )
shape = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
use_in_baked_light = true
mesh = ExtResource( 6 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.8 )
use_in_baked_light = true
mesh = ExtResource( 1 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
use_in_baked_light = true
mesh = ExtResource( 5 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
fov = 40.0

[node name="CamPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0197797, 1.05527, 0.0323849 )
material_override = SubResource( 2 )
mesh = SubResource( 1 )
material/0 = null

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 720, 540 )
keep_3d_linear = true
usage = 0
render_target_v_flip = true

[node name="FakeGame" parent="Viewport" instance=ExtResource( 2 )]

[node name="Duration" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.02459, 0.1 )
spot_range = 1.0
spot_angle = 70.0

[node name="SitPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0.5 )

[node name="StandPos" type="Position3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 1.5 )

[node name="PlayerParent" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 4 )
attenuation_model = 2
unit_db = -30.0
autoplay = true

[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
